[package]
name = "tulip-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = { version = "0.68.1", default-features = false }

[build-dependencies]
bindgen = { version = "0.68.1", default-features = false }
